2010-07-13  Evan Briones <erbriones@gmail.com>

	* AssociationCommands.cs: Added new commands for IAssociation.
	
	* ClassCommands.cs: Added new ClassFigure specific commands.
	
	* CollapsableCommand.cs: Added new commands for ICollapsable.